--- a/tag-assets.html
+++ b/tag-assets.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="js/jquery_ui/jquery-ui.css" />
         <link rel="stylesheet" href="css/bootstrap.css" />
         <link rel="stylesheet" href="css/bootstrap-colorpicker.min.css" />
+        <link rel="stylesheet" href="css/slick.css" />
         
         <link rel="stylesheet" href="css/default.css" />
         <link rel="stylesheet" href="css/main.css" />
